--- a/app/build.gradle
+++ b/app/build.gradle
@@ -93,4 +93,8 @@ dependencies {
 
     // Moshi
     implementation "com.squareup.moshi:moshi:1.13.0"
+    kapt "com.squareup.moshi:moshi-kotlin-codegen:1.13.0"
+
+    // Timber
+    implementation "com.jakewharton.timber:timber:5.0.1"
 }
