--- a/build.gradle
+++ b/build.gradle
@@ -1,9 +1,41 @@
 buildscript {
     ext {
-        compose_version = '1.1.0-beta01'
+        // Compose
+        composeVersion = '1.1.0-beta01'
+        coreKtxVersion = '1.7.0'
+        lifecycleKtxVersion = '2.3.1'
+        activityComposeVersion = '1.3.1'
+        viewModelCompose = '2.5.0'
+
+        // Dagger-Hilt
+        hiltVersion = '2.42'
+        hiltCompilerVersion = '1.0.0'
+
+        // Room
+        roomVersion = '2.4.2'
+
+        // Retrofit
+        retrofitVersion = '2.9.0'
+
+        // OkHttp
+        okHttpVersion = '5.0.0-alpha.3'
+
+        // Moshi
+        moshiVersion = '1.13.0'
+
+        // Timber
+        timberVersion = '5.0.1'
+
+        // Accompanist
+        accompanistPagerVersion = '0.23.1'
+
+        // Tests
+        junitVersion = '4.13.2'
+        junitExtVersion = '1.1.3'
+        espressoVersion = '3.4.0'
     }
     dependencies {
-        classpath "com.google.dagger:hilt-android-gradle-plugin:2.42"
+        classpath "com.google.dagger:hilt-android-gradle-plugin:$hiltVersion"
     }
 }// Top-level build file where you can add configuration options common to all sub-projects/modules.
 plugins {
